Fixed some grid spacing

--- a/Scripts/Calculate/decimalToAll.css
+++ b/Scripts/Calculate/decimalToAll.css
@@ -81,7 +81,7 @@ h1 {
   display: grid;
   grid-template-columns: 1fr 1fr 1fr 1fr;
   grid-template-rows: 50px 50px 50px;
-  grid-gap: 20px;
+  grid-row-gap: 20px;
 }
 
 #decimal {
